--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "livewire/livewire": "^3.6.4",
         "livewire/volt": "^1.7.0",
         "openai-php/laravel": "^0.18.0",
+        "phpmailer/phpmailer": "^7.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/browsershot": "^5.2"
     },
